# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  board_repository.py  card.py  docker-compose.dev.yml  docker-compose.prod.yml  list.py  pyproject.toml  requirements.txt  setup.sh  start_project.sh  start_project_production.sh  start_project_test.sh  trello_service.py  view_model.py
templates/: index.html
test/: test_app.py  test_client.py  test_view_model.py
test_e2e/: test_app.py
